--- a/_posts/2020-06-21-첫-글.md
+++ b/_posts/2020-06-21-첫-글.md
@@ -13,7 +13,7 @@ tags:
 
 * 블로그 만들 때 참고했던 [Suhwan Jee](https://suhwan.dev/2017/06/22/jekyll-themes/)님의 블로그.
 
-아유 무슨 테마 하나 적용하는 것도 이리 복잡한지
+아유 무슨 테마 하나 적용하는 것도 이리 복잡한지..
 
 원래 [Tale](https://github.com/chesterhow/tale/)이라는 테마를 적용하려고 했는데 걔는 자꾸 스타일이 적용이 안되갖고
 
@@ -21,7 +21,7 @@ tags:
 
 아직도 이것저것 손볼 게 많고, 알아봐야될 것도 많고
 
-맘같아서는 테마도 커스터마이징해서 내맘대로 꾸미고 싶은데
+맘 같아서는 테마도 커스터마이징해서 내맘대로 꾸미고 싶은데
 
 뭐 어떡하나. 방법을 모르는 것을.
 
