--- a/_posts/2020-06-21-첫-글.md
+++ b/_posts/2020-06-21-첫-글.md
@@ -7,11 +7,12 @@ tags:
 
 엄청 오랫동안 헤매다가 드디어 블로그를 만들긴 했다.
 
-뭐가 이리도 복잡한지.. 어휴
+복잡해서 머리 빠개지는 줄 알았네;
+
 
 일단은 [Kiko now](https://github.com/AWEEKJ/kiko-now)라는 맘에 드는 테마를 찾아서 적용하는 데까진 성공했다.
 
-* 블로그 만들 때 참고했던 [Suhwan Jee](https://suhwan.dev/2017/06/22/jekyll-themes/)님의 블로그.
+`블로그 만들 때 참고했던 [Suhwan Jee](https://suhwan.dev/2017/06/22/jekyll-themes/)님의 블로그.`
 
 아유 무슨 테마 하나 적용하는 것도 이리 복잡한지..
 
@@ -26,6 +27,7 @@ tags:
 뭐 어떡하나. 방법을 모르는 것을.
 
 포스팅 좀 하다가 좀 익숙해진다 싶으면 그 때 한 걸음 더 나가는 걸로.
+
 
 현재 목표로 하고 있는 블로그는 [Jihye Leee](http://jihyeleee.com/)님의 블로그. 멋있다.
 
