really really last modification

--- a/_posts/2020-06-21-첫-글.md
+++ b/_posts/2020-06-21-첫-글.md
@@ -5,14 +5,14 @@ tags:
   - diary
 ---
 
-엄청 오랫동안 헤매다가 드디어 블로그를 만들긴 했다.
+오랫동안 헤매다가 드디어 블로그가 만들어졌다.
 
-복잡해서 머리 빠개지는 줄 알았네;
+에러 해결 방법을 몰라서 중간에 때려칠 뻔 했다. 
+
+`블로그 만들 때 참고했던 [Suhwan Jee](https://suhwan.dev/2017/06/22/jekyll-themes/)님의 블로그.`
 
 
 일단은 [Kiko now](https://github.com/AWEEKJ/kiko-now)라는 맘에 드는 테마를 찾아서 적용하는 데까진 성공했다.
-
-`블로그 만들 때 참고했던 [Suhwan Jee](https://suhwan.dev/2017/06/22/jekyll-themes/)님의 블로그.`
 
 아유 무슨 테마 하나 적용하는 것도 이리 복잡한지..
 
