--- a/_posts/2020-06-22-React-Day-1.md
+++ b/_posts/2020-06-22-React-Day-1.md
@@ -12,7 +12,7 @@ React의 처음 목적은 UI를 편하게 제작하기 위함.
 
 ### Component
 Component는 사용자 정의 태그. 기존에 있던 태그들의 묶음이라고 볼 수 있을 듯.  
-#### Component의 장점  
+Component의 장점은 대충 다음과 같다.
 1. 가독성
 1. 재사용성
 1. 유지보수  
@@ -40,13 +40,13 @@ create-react-app .
 
 ### Directory 분석
 Create React App 프로젝트 폴더의 디렉토리는 크게 public과 src로 나눠진다.  
-__public__은 index.html이 위치하는 곳.  
+**public** 은 index.html이 위치하는 곳.  
 index.html의 `<div id = "root">`에 주목하자.  
 우리가 react를 통해 만든 Component들이 들어가는 곳이 바로 저 root div이다.  
 
 그러면 그 Component들은 어디서 만들면 되느냐?  
 바로 __src__ 디렉토리 안의 파일들로 만들어주면 된다.  
-src 폴더 안에 있는 index.js가 진입 파일(entry 파일).  
+**src** 폴더 안에 있는 index.js가 진입 파일(entry 파일).  
 
 index.js에서 주목할 건 바로  
 `ReactDOM.render(<App />, document.getElementById('root'));`.  
