--- a/_posts/2020-06-22-공부-생각.md
+++ b/_posts/2020-06-22-공부-생각.md
@@ -4,14 +4,16 @@ title: 공부 생각
 tags:
   - diary
 ---
+이번 방학은 낭비하면 안되는데.  
+오늘 든 생각들.  
 
-1. 결국은 `공식문서`랑 `stackoverflow`로 귀결되는 듯. 영어에 대한 거부감을 없애자.  
-2. 최근에 MERN이라는 용어를 접하게 됐다.  
+1. 결국은 **공식문서**랑 **stackoverflow**로 귀결되는 듯. 영어에 대한 거부감을 없애자.  
+1. 최근에 MERN이라는 용어를 접하게 됐다.  
 `MongoDB, Express.js, React, Node.js`를 뜻하는 용어.  
 동적 웹사이트와 웹앱을 개발하기 위한 소프트웨어 스택이란다.  
-이번 방학때는 얘네들을 다 써보고, 프로젝트를 만들어보는 것을 목표로 하자.  
+~~이번 방학때는 얘네들을 다 써보고, 프로젝트를 만들어보는 것을 목표로 하자.~~ 
 자바스크립트만 잘한다고 뭐가 되는 건 아니더라.  
-3. 공부하다보니 깨닫게 된 거지만  
+1. 공부하다보니 깨닫게 된 거지만  
 아무리 어려워보이는 개념이라도  
 결국에는 간단하더라.  
 간단하게 생각하면 다 쉽게쉽게 넘어가지더라.  
