--- a/_posts/2020-06-22-React-Day-1.md
+++ b/_posts/2020-06-22-React-Day-1.md
@@ -85,7 +85,7 @@ App이라는 component의 디자인을 css 파일로 작성하여 적용한다.
 
 index.css는 index 페이지 전체의 css.  
 App.css는 App이라는 component만의 css.  
-왜 css 파일이 여러 개였는지 드디어 알게 됨. 
+하나의 페이지에 왜 css 파일이 여러 개였는지 드디어 알게 됨. 
 
 ### React 주의할 점  
 component를 만들 때는, 즉 return문 안에서는  
@@ -98,5 +98,5 @@ component를 만들 때는, 즉 return문 안에서는
 
 예전에, 무작정 React를 사용해보자 하고 했을 때 몰랐던 것들이 조금씩 보이는 듯.  
 왜 css 파일들이 그렇게도 많았는지. Component가 도대체 뭔지.  
-왜 태그 안에 또 태그가 있고, 구조가 그렇게 복잡했는지.  
+왜 이렇게 타고 타고 들어가는 복잡한 구조를 하고 있는지.
 대충 전체적인 맥락이 잡히는 것 같은 느낌.
