--- a/_posts/2020-06-22-React-Day-1.md
+++ b/_posts/2020-06-22-React-Day-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: React 기본 개념
+title: React (1) 기본 개념
 tags:
   - TIL
   - react
@@ -41,6 +41,8 @@ create-react-app .
 ### Directory 분석
 Create React App 프로젝트 폴더의 디렉토리는 크게 public과 src로 나눠진다.  
 **public** 은 index.html이 위치하는 곳.  
+이 **public**은 `npm run start`를 실행했을 때 찾아가는 document root이기도 하다.  
+
 index.html의 `<div id = "root">`에 주목하자.  
 우리가 react를 통해 만든 Component들이 들어가는 곳이 바로 저 root div이다.  
 
@@ -95,6 +97,9 @@ component를 만들 때는, 즉 return문 안에서는
 ### Deploy
 나중에 웹 서비스로 배포할 때는 `npm run build`를 통해 빌드하면 build라는 폴더가 생성된다.  
 웹 서버의 최상위 디렉토리에다가 build 디렉토리 안에 있는 파일들을 위치시키면 된다.  
+
+`npm run start`를 할 때 찾아가는 최상위 디렉토리가 **public**이었던 것 처럼  
+`npm run build`를 통해 deploy를 할 때 사용되는 최상위 디렉토리가 **build** 인 것.  
 
 예전에, 무작정 React를 사용해보자 하고 했을 때 몰랐던 것들이 조금씩 보이는 듯.  
 왜 css 파일들이 그렇게도 많았는지. Component가 도대체 뭔지.  
