--- a/_posts/2020-06-23-React-Day-2.md
+++ b/_posts/2020-06-23-React-Day-2.md
@@ -31,7 +31,7 @@ class 방식으로 만들고, component 클래스를 상속받음.
 
 function으로 만드는 방법도 있음.  
 
-여튼, 이제 다른 곳에서 <Subject></Subject> 라는 형태로 사용할 수가 있게 된 것.  
+여튼, 이제 다른 곳에서 `<Subject></Subject>` 라는 형태로 사용할 수가 있게 된 것.  
 ```jsx
 class App extends Component {
   render() {
@@ -52,15 +52,15 @@ React component의 주요 용도는 정리정돈이라고 볼 수 있음.
 attribute는 태그가 가지는 속성을 의미.  
 a 태그로 치면 주소를 나타내는 href같은 것들이 바로 attribute.  
 
-### Component와 props
-우리가 그냥 <Subject>라고만 component를 만들어놓으면, 걔는 항상 똑같은 일만 해야 함.  
+### Component와 props  
+우리가 그냥 `<Subject>`라고만 component를 만들어놓으면, 걔는 항상 똑같은 일만 해야 함.  
 근데 우리가 component에다가 attribute처럼 여러 가지 속성을 집어넣을 수 있으면,  
 그것을 통해 여러 가지 일을 하는 component를 만들 수가 있게 된다.  
 재사용성이 높아진다는 뜻.  
-동일한 개념이지만, 용어만 다르다.  
+거의 유사한 개념이고, 용어만 다르다.  
 tag의 attribute / component의 props.  
 
-<u>상위 component(여기선 App)에서 하위 component로 전달해주는 속성값</u>이라고 정의하기도 한다.  
+<u>상위 component(여기선 App)에서 하위 component(Subject)로 전달해주는 속성값</u>이라고 정의하기도 한다.  
 ```jsx
 class Subject extends Component {
   render() {
@@ -68,6 +68,7 @@ class Subject extends Component {
       <header>
         <h1>{this.props.title}</h1>
         {this.props.sub}
+        // 요렇게 일종의 템플릿을 만들어 놓으면, 이제 상위 component인 App에서 props를 입력함으로써 Subject component를 완성시키는 것.
       </header>
     );
   }
@@ -87,20 +88,21 @@ class App extends Component {
   }
 }
 ```
-여기서 보면, 동일한 Subject component의 props로 다른 입력값을 줘서  
-다른 출력값을 내보내게 되었다.  
+여기서 보면, 동일한 Subject component의 props로 다른 입력값을 주고 있다.  
+그러면 화면에는 서로 다른 결과가 출력됨.   
 
 ### state
 state라는 개념은 props랑 같이 봐야 한다.  
 state와 props는 둘 다, component가 좀 더 다양한 일을 하게 만들기 위해 필요함.  
 
-**props**는 component의 동작을 바꿀 수 있게, component의 사용자에게 제공하는 입력.  
+**props**는 component의 동작을 바꿀 수 있게, component의 사용자에게 제공하는 일종의 UI.  
 (component의 사용자가 입력하는 정보).  
 **state**는 component의 사용자가 알 필요가 없는 내부 동작에 필요한 정보.  
 **props**가 좀 더 사용자 입장의 데이터라면, **state**는 좀 더 구현하는 사람 입장의 데이터.  
 
 component를 사용하기 위해 필요한 '외부'의 **props**와  
-그 props에 따라서 component를 실제로 구현하는 데에 필요한 '내부'의 **state**가 분리되어 있어야 한다.  
+그 props에 따라서 component를 실제로 구현하는 데에 필요한 '내부'의 **state**가  
+철저히 분리되어 있어야 한다.  
 
 쉽게 말하면, state는 component 내부적으로만 사용될 데이터들을 전부 몰아넣는 곳.  
 
@@ -132,7 +134,7 @@ class App extends Component {
 component의 데이터들을 state에서 가져왔다는 차이점.  
 
 ### state와 props
-```
+```jsx
 class Navigation extends Component {
   render() {
     var lists = [];
@@ -179,7 +181,8 @@ class App extends Component {
 위의 코드에서 보면, 부모인 App의 입장에서는 state라는 내부 정보를 가지고 있고  
 그것을 자식에게 전달할 때는 props를 통해서 전달한다.  
 
-App의 입장에서는 Navigation이라는 component가 내부적으로 어떻게 돌아가는지 전혀 알 필요가 없다.  
+App의 입장에서는 Navigation이라는 component가  
+내부적으로 어떻게 돌아가는지 전혀 알 필요가 없다.  
 그냥, data라는 props로 어떤 데이터를 전달하면 되는지만 생각하면 됨.  
 
 ### key
@@ -196,7 +199,7 @@ constructor(props) {
   this.state = { color : props.color };
 }
 ```
-이렇게 하지 말라는 것.
+이렇게 하지 말라는 것.  
 그냥 this.props.color로 직접 사용해야 함.
 
 
