--- a/_posts/2020-06-23-React-Day-2.md
+++ b/_posts/2020-06-23-React-Day-2.md
@@ -185,6 +185,13 @@ App의 입장에서는 Navigation이라는 component가
 내부적으로 어떻게 돌아가는지 전혀 알 필요가 없다.  
 그냥, data라는 props로 어떤 데이터를 전달하면 되는지만 생각하면 됨.  
 
+참고로, 저 Navigation component의 lists는 다음과 같은 구성.
+```jsx
+<li><a href="1.html">HTML</a></li>
+<li><a href="1.html">CSS</a></li>
+<li><a href="1.html">Javascript</a></li>
+```
+
 ### key
 위의 코드를 실행시키면 `"Each child in a list should have a unique 'key' props"`라는 에러가 뜬다.  
 각 리스트의 항목끼리 식별될 수 있는 유니크한 속성이 필요하다는 것.  
