--- a/_posts/2020-06-24-React-Day-3.md
+++ b/_posts/2020-06-24-React-Day-3.md
@@ -132,13 +132,13 @@ onClick = {function(e) {
 하지만, 이미 component의 생성이 끝난 다음에 동적으로 state의 값을 바꾸고 싶다면  
 직접적으로 state를 수정하면 안 된다.  
 
-**setState**라는 함수에, 우리가 변경하고싶은 값을 ~~객체의 형태~~로 전달해야 한다.  
+**setState**라는 함수에, 우리가 변경하고싶은 값을 <u>객체의 형태</u>로 전달해야 한다.  
 그래야 react가 state의 변화를 인지할 수 있다.  
 
 우리가 setState를 통해 react에게 state의 변화를 알리면  
 render함수가 재호출되면서, 그 하위 component들의 render 함수도 재호출됨.  
 
-기억할 것은, ~~constructor 바깥에서는 항상 setState를 사용해야한다~~라는 것.  
+기억할 것은, <u>constructor 바깥에서는 항상 setState를 사용해야한다</u>라는 것.  
 
 ### 전체 코드
 ```jsx
