--- a/_posts/2020-06-24-React-Day-3.md
+++ b/_posts/2020-06-24-React-Day-3.md
@@ -22,7 +22,7 @@ react에서는 (props의 값이나)state의 값이 바뀌면
 걔네들까지 전부 싹 다시 호출된다.  
 
 → 결국, props나 state가 변경되면 화면이 다시 그려지게 된다는 뜻.  
-```
+```jsx
 class App extends Component {
   constructor(props) {
     this.state = { ... };
@@ -55,8 +55,8 @@ Subject component 안에서 event가 발생했을 때, Subject 바깥에 있는
 그것에 앞서, 일단은 Subject component를 풀어 써서 props를 거치지 않고  
 state를 직접 가져다 써서 event를 프로그래밍 해보자.  
 
-a 태그에 onclick event를 붙여줄건데, 여기서 주의할 점.  
-React는 JSX를 사용하기 때문에 자바스크립트와 문법이 다르다는 점을 항상 유념할 것.  
+Subject 내의 a 태그에 onclick event를 붙여줄건데, 여기서 주의할 점.  
+React는 JSX를 사용하기 때문에 자바스크립트와 문법이 다르다.  
 * 자바스크립트 : onclick = "클릭 이벤트 내용"  
 * JSX : onClick = {클릭 이벤트 내용} (onclick의 c가 대문자임)  
 ```jsx
@@ -66,7 +66,7 @@ React는 JSX를 사용하기 때문에 자바스크립트와 문법이 다르다
 ```
 
 ### preventDefault
-이벤트를 달고, a링크를 클릭해보면 페이지가 새로고침 됨.  
+이벤트를 달고, a 링크를 클릭해보면 페이지가 새로고침 됨.  
 이는 a라는 태그에 원래 붙어있던 기본 동작 때문.  
 이 기본 동작을 방지하는 메소드가 바로 preventDefault.  
 
@@ -94,12 +94,12 @@ preventDefault 메소드는 이 이벤트 객체의 메소드.
 에러가 발생할 것이다.  
 여기에는 두 가지의 문제점이 있다.  
 1. 이벤트가 실행됐을 때 호출되는 함수 안에서는 'this'가 component를 가리키지 않는다. 정확하게는, 아무 값도 세팅되어있지 않아서 'default'값을 가질 것이다.
-1. state의 값을 직접 변경해선 안된다. React에서 state값이 바뀌었다는 것을 인식하지 못하기 때문.
+1. state의 값을 직접 변경해선 안된다. state의 값을 직접 변경하면 React에서 state값이 바뀐 것을 인식하지 못하기 때문.
 
 ### bind
 우선, 첫 번째 문제의 해결책.  
 event를 붙여줄 때 this를 찾을 수 없어서 발생한 에러.  
-이럴 때는 이벤트 함수가 끝난 직후에 bind() 메소드를 붙여주면 된다.  
+이럴 때는 이벤트 함수 끝에 bind() 메소드를 붙여주면 된다.  
 ```jsx
 onClick = {function(e) {
   e.preventDefault();
@@ -126,8 +126,8 @@ onClick = {function(e) {
 ```
 
 ### setState(2)
-생성자, 즉 component가 생성될 때 맨 처음에 호출되는 constructor 함수.  
-그 constructor 함수에서는 `this.state = { 대충 state 내용 }` 이런식으로 state를 수정할 수 있다.  
+생성자, 즉 component가 생성될 때 맨 처음에 constructor 함수가 호출되는데,  
+그 함수에서는 `this.state = { 대충 state 내용 }` 이런식으로 state를 수정할 수 있다.  
 
 하지만, 이미 component의 생성이 끝난 다음에 동적으로 state의 값을 바꾸고 싶다면  
 직접적으로 state를 수정하면 안 된다.  
@@ -184,11 +184,11 @@ a태그 클릭 이벤트 발생(클릭으로 인한 mode 변경)
 →  state가 변했으므로 App component의 render가 다시 호출됨.  
 
 이 때, mode가 바뀌면서 _title, _desc의 값이 바뀌게 되고,  
-그러면 content의 props로 들어가는 값이 바뀌게 된다.  
+그러면 Content의 props로 들어가는 값들이 바뀌게 된다.  
 
-→  바뀐 props를 기반으로 해서 content의 render함수가 다시 호출된다.  
+→  바뀐 props를 기반으로 해서 Content의 render함수가 다시 호출된다.  
 
-→  content 뿐만 아니라 App의 모든 하위 component들이  
+→  Content 뿐만 아니라 App의 모든 하위 component들이  
 다 이런 식으로 다시 렌더링 된다(render가 다시 호출된다).  
 
 
@@ -199,6 +199,8 @@ component의 이벤트를 만들어서
 
 지금까지는 Subject를 풀어 써서 이벤트를 프로그래밍 했으니,  
 이제 Subject를 다시 사용할 차례.  
+(event를 만들어서 하위 component에 전달함으로써,  
+그 component를 풀어쓰지 않고도 event를 사용하는 게 가능해짐.)  
 
 ```jsx
 class App extends Component {
@@ -227,7 +229,7 @@ class App extends Component {
   }
 }
 
-{/* 여기서, onChangePage라는 이벤트는 props의 형태로 Subject에 전달될 것이라는 것을 예측할 수 있다.
+{/* 여기서, onChangePage라는 이벤트는 props의 형태로 Subject에 전달될 것이라는 것을 알 수 있다.
     결국, 얘도 props의 일부임. 그냥 props 안에 함수를 전달해주는 형태인 듯. */}
 
 class Subject extends Component {
