--- a/_posts/2020-06-24-React-Day-3.md
+++ b/_posts/2020-06-24-React-Day-3.md
@@ -192,7 +192,7 @@ a태그 클릭 이벤트 발생(클릭으로 인한 mode 변경)
 다 이런 식으로 다시 렌더링 된다(render가 다시 호출된다).  
 
 
-### event 만들기
+### event 만들어서 하위 component로 전달하기
 component의 이벤트를 만들어서  
 그 event를 사용하는 사람들이 내가 만든 이벤트로  
 이벤트 프로그래밍을 할 수 있게 해보자.  
