--- a/_posts/2020-06-26-React-Day-4-1.md
+++ b/_posts/2020-06-26-React-Day-4-1.md
@@ -66,7 +66,7 @@ b.name = "Redux";
 console.log(a, b); // {name: 'React'} {name: 'Redux'}
 ```
 참고로, Object.assign의 첫 번째 인자로 꼭 빈 객체를 넣어야되는 건 아님.  
-원래 Object.assign 함수는 첫 번째 인자로 오는 객체에다가 두 번째 인자로 오는 객체를 넣어주는 함수.  
+원래 Object.assign 함수는 첫 번째 인자의 객체에다가 두 번째 인자 객체를 넣어주는 함수.  
 ```jsx
 var a = {name: 'React'};
 var b = Object.assign({one: 1, two: 2});
