--- a/_posts/2020-06-25-React-Day-4.md
+++ b/_posts/2020-06-25-React-Day-4.md
@@ -20,7 +20,7 @@ props와 state 모두 render 함수 호출을 유발하기 때문에
 ### props & event
 상위 component가 하위 component로 값을 전달할 때는 props를 통해 전달  
 하위 component가 상위 component의 값을 바꾸고 싶을 때는 event를 통해 변경  
-(React에서 event는 '상위 component의 state를 변경하는 행위'라고 생각하는 게 편함)  
+(React에서 event는 '상위 component의 state를 변경하는 방법'이라고 생각하는 게 편함)  
 
 # CRUD
 ### CRUD의 구현 
@@ -80,7 +80,7 @@ App component의 state에 변화가 일어나야 한다.
 </ul>
 ```
 호출부를 통해 구상을 했으니, 이제 onChangeMode를 정의해줄 차례.  
-create, update 등의 인자를 전달받도록 했으므로, 그렇게 구현해주면 된다.  
+create, update 등의 인자를 전달했으므로, 그 인자들을 받을 수 있게 구현해주면 된다.  
 ```jsx
 <Control onChangeMode={function(_mode) {
   this.setState({ mode: _mode });
