--- a/_posts/2020-06-27-React-Day-6.md
+++ b/_posts/2020-06-27-React-Day-6.md
@@ -34,7 +34,10 @@ getReadContent() {
 else if (this.state.mode === "update") {
   _content = this.getReadContent();
   _article = <UpdateContent data={_content} onSubmitting={function(_title, _desc) {
-    var _contents = this.state.contents.concat({id:this.state.selected_content_id, title: _title, desc: _desc});
+    var _contents = this.state.contents.concat(
+      {id:this.state.selected_content_id, 
+       title: _title, 
+       desc: _desc});
     this.setState({contents : _contents});
   }.bind(this)}></UpdateContent>;
 }
@@ -69,7 +72,8 @@ onChange 핸들러를 사용하지 않으면 걔는 read-only가 된다.`
 React가 중간에 개입해서 아무것도 못하게 막아버린다.  
 어떻게 해야 할까?  
 
-state는 가변적인 데이터니까, <u>하위 component 내부에서 그 props 데이터를 state화 시키면 된다.</u>  
+state는 가변적인 데이터니까,  
+<u>하위 component 내부에서 그 props 데이터를 state화 시키면 된다.</u>  
 ```jsx
 class UpdateContent extends Component {
   constructor(props) {
@@ -96,7 +100,8 @@ class UpdateContent extends Component {
 근데, 이렇게 해도 여전히 수정은 안됨.  
 
 우리가 input의 value를 수정한다고 해서, state의 데이터가 바뀐다는 근거가 없다.  
-만약 그 input의 value가 그냥 바뀌어 버리면, 그 바뀐 value값은 state와 관련이 없는 값이 되어버리므로  
+만약 그 input의 value가 그냥 바뀌어 버리면,  
+그 바뀐 value값은 state와 관련이 없는 값이 되어버리므로  
 해당 input과 state 사이의 연결이 끊어지는 것과 마찬가지.  
 
 우리는 input의 value를 수정했을 때, state의 데이터도 수정되기를 원한다.  
