--- a/_posts/2020-07-03-정규표현식.md
+++ b/_posts/2020-07-03-정규표현식.md
@@ -21,3 +21,19 @@ tags:
 
 정규표현식 사용한 풀이 / 사용하지 않은 풀이  
 둘 다 풀어봐야되는건가?  
+
+### match 함수
+match 함수는, 대상 문자열 중에서,  
+인자로 오는 정규표현식에 맞는 문자열을 찾아 반환하는 함수다.  
+근데 오늘 match 함수의 새로운 사용법을 하나 배웠다.  
+
+<u>'match함수의 정규표현식에서 괄호로 묶은 내용들은 각자 그룹으로 관리되어,</u>  
+<u>원래의 문자열과 함께 배열의 요소로 반환된다'</u>는 것.  
+
+일정한 패턴을 가진 문자열들을 추출해낼 때 유용하게 사용할 수 있을 듯.  
+```javascript
+﻿const el_1 = '1S*';
+const el_2 = '2D';
+console.log(el_1.match(/([0-9]{1,2})([A-Z])([*#])*/)); // {'1S*', '1', 'S', '*'}
+console.log(el_2.match(/([0-9]{1,2})([A-Z])([*#])*/)); // {'2D', '2', 'D', undefined}
+```
