--- a/_posts/2020-07-03-정규표현식.md
+++ b/_posts/2020-07-03-정규표현식.md
@@ -23,8 +23,9 @@ tags:
 둘 다 풀어봐야되는건가?  
 
 ### match 함수
-match 함수는, 대상 문자열 중에서,  
+match 함수는, 대상 문자열 중에서  
 인자로 오는 정규표현식에 맞는 문자열을 찾아 반환하는 함수다.  
+
 근데 오늘 match 함수의 새로운 사용법을 하나 배웠다.  
 
 <u>'match함수의 정규표현식에서 괄호로 묶은 내용들은 각자 그룹으로 관리되어,</u>  
