--- a/_posts/2020-07-08-MERN-memo.md
+++ b/_posts/2020-07-08-MERN-memo.md
@@ -37,7 +37,7 @@ import { BrowserRouter as Router, Route } from 'react-router-dom';
 (Router 종류는 많음. 찾아볼 것.)  
 `Router` element를 생성할 수 있게 됨.  
 라우터와 관련된 모든 컴포넌트들을 Router element 안에다가 집어넣으면 됨.  
-```
+```jsx
 import Navbar from "./components/navbar.component";
 import ExercisesList from "./components/exercises-list.component";
 import EditExercise from "./components/edit-exercise.component";
@@ -63,7 +63,7 @@ Navbar, ExerciseList, EditExercise 등등은 전부 component 이름임.
 
 react-router-dom을 활용하면 이런식으로  
 각 component를 서로 다른 URL path에다가 맵핑할 수 있다.  
-```
+```jsx
 // navbar.component.js
 import React, { Component } from 'react';
 import { Link } from 'react-router-dom';
