--- a/_posts/2020-07-08-MERN-memo.md
+++ b/_posts/2020-07-08-MERN-memo.md
@@ -96,5 +96,131 @@ export default class Navbar extends Component {
 (react-router에서는 a 태그 대신 Link 태그를 사용한다)  
 
 백엔드의 express.js와 프론트엔드의 react-router-dom을 활용하여 라우팅을 할 수 있다.  
+---
+### Connect Back and Front
+여기까지는 백엔드와 프론트엔드가 분리되어 있는 상태.  
 
+프론트엔드에서 백엔드의 server endpoint로 HTTP request를 날려보냄으로써 둘을 연결.  
+백엔드로 HTTP 요청을 보낼 때는 axios 라이브러리를 사용.  
+`npm install axios`  
+`import axios from 'axios';`  
 
+### 백엔드로 HTTP Post 요청
+```jsx
+onSubmit(e) {
+  e.preventDefault();
+  const user = {
+    username : this.state.username
+  }
+  console.log(user);
+  
+  axios.post('http://localhost:5000/users/add', user)
+    .then(res => console.log(res.data));
+
+  window.location = '/';
+}
+```
+http://localhost:5000/users/add라는 backend endpoint로 HTTP post 요청을 보냄.  
+endpoint는 request body로 JSON 객체를 가져옴.  
+객체의 형태는 두 번째 인자인 user.  
+(user 파일에서 mongoose 객체로 정의)  
+ 
+axios에서 promise가 반환되므로 then으로 받음.  
+(async await을 사용하던가)  
+
+`window.location = '/';`  
+Home 화면으로 돌아가도록 하는 코드.  
+(url path를 '/'로 고치라는 뜻이니깐)  
+여기서는 폼에서 submit을 하고 난 뒤에 다시 home으로 돌아가게 만듬.  
+
+### 백엔드로 HTTP Get 요청
+```jsx
+componentDidMount() {
+  axios.get('http://localhost:5000/users/')
+    .then(response => {
+      if(response.data.length > 0) {
+        this.setState({
+          users : response.data.map(user => user.username),
+          username : response.data[0].username
+// user는 사용자의 username으로 이루어진 배열(선택목록)
+// username은 현재 선택한 username.
+// default값으로 그냥 맨 처음의 user를 지정함.
+        });
+      }
+    });
+}
+```
+처음 화면을 불러올 때 화면의 Form을 세팅하는 코드(초기값을 넣어주는)  
+backend로 HTTP get 요청을 보낸다.  
+endpoint가 '/'이고, get 메소드이기 때문에 backend 코드에 가서 보면  
+router.route('/').get ~ 함수가 실행되어 DB로 요청을 보낸다.  
+
+DB에서 데이터를 가져오라고 프론트가 백엔드한테 시킴.  
+
+### 백엔드로 HTTP Delete 요청
+```jsx
+deleteExercise(id) {
+  axios.delete('http://localhost:5000/exercises/' +id)
+    .then(res => console.log(res.data));
+  this.setState({
+    exercises : this.state.exercises.filter(el => el._id !== id)
+  })
+}
+```
+삭제 요청 예시 코드.  
+
+setState부분을 유의해서 볼 것.  
+exercises 배열에서, 삭제하기로 한 id를 가진 놈만 제외하고 다 남김.  
+_id는 mongoDB에서 데이터마다 자동으로 부여한 고유 id.  
+
+### 삭제 버튼 & Function component
+function component는 class component에서  
+state와 lifecycle method가 없는 버젼.  
+props와 JSX만을 사용하는 간단한 component를 만들 때 사용.  
+이런 간단한 컴포넌트들은 별개의 파일로 만들어 줄 필요 없음.  
+```
+const Exercise = props => (
+  <tr>
+    <td>{props.exercise.username}</td>
+    <td>{props.exercise.description}</td>
+    <td>{props.exercise.duration}</td>
+    <td>{props.exercise.date.substring(0, 10)}</td>
+    <td>
+      <Link to={"/edit/" + props.exercise._id}>edit</Link> | <a href="#" onClick={() => {props.deleteExercise(props.exercise._id) }}>delete</a>
+    </td>
+  </tr>
+)
+```
+delete는 링크로 구현하지 않음.  
+a 태그로 구현하되, 아무곳에도 가지 않게 하기 위해 href='#'를 사용.  
+해당 링크를 클릭했을 때의 onClick event로 삭제를 구현했음.  
+
+사실, 버튼으로 만드는 게 가장 좋지만  
+영상에서는 버튼으로 만들 시간이 없어서 간단하게 a 태그로 만든 듯.  
+
+### this.props.match.params
+```jsx
+<Route path="/about/:username" component={About} />
+```
+react-router를 사용해서 URL에 username이라는 parameter를 넘겨줬다.  
+(username 앞에 저 ':'는 parameter임을 의미)  
+그러면 저 About이라는 component에서는  
+```jsx
+class About extends Component {
+  render() {
+    return (
+      <div>
+        {this.props.match.params.username}입니다.
+      </div>
+    );
+  }
+}
+```
+이런 식으로 데이터를 받아올 수 있다.  
+Routing을 통해 페이지를 이동할 때 데이터를 넘겨주는 방법.  
+```jsx
+axios.get('http://localhost:5000/exercises/' + this.props.match.params.id) ...
+```
+이런 식으로 uri를 지정할 때 많이 사용한다.  
+
+[원본 강의 영상](https://www.youtube.com/watch?v=7CqJlxBYj-M)
