--- a/_posts/2020-07-08-MERN-memo.md
+++ b/_posts/2020-07-08-MERN-memo.md
@@ -96,7 +96,8 @@ export default class Navbar extends Component {
 (react-router에서는 a 태그 대신 Link 태그를 사용한다)  
 
 백엔드의 express.js와 프론트엔드의 react-router-dom을 활용하여 라우팅을 할 수 있다.  
----
+
+***
 ### Connect Back and Front
 여기까지는 백엔드와 프론트엔드가 분리되어 있는 상태.  
 
@@ -120,7 +121,7 @@ onSubmit(e) {
   window.location = '/';
 }
 ```
-http://localhost:5000/users/add라는 backend endpoint로 HTTP post 요청을 보냄.  
+`http://localhost:5000/users/add`라는 backend endpoint로 HTTP post 요청을 보냄.  
 endpoint는 request body로 JSON 객체를 가져옴.  
 객체의 형태는 두 번째 인자인 user.  
 (user 파일에서 mongoose 객체로 정의)  
