--- a/_posts/2020-07-08-MERN-memo.md
+++ b/_posts/2020-07-08-MERN-memo.md
@@ -98,7 +98,7 @@ export default class Navbar extends Component {
 백엔드의 express.js와 프론트엔드의 react-router-dom을 활용하여 라우팅을 할 수 있다.  
 
 ***
-### Connect Back and Front
+# Connect Back and Front
 여기까지는 백엔드와 프론트엔드가 분리되어 있는 상태.  
 
 프론트엔드에서 백엔드의 server endpoint로 HTTP request를 날려보냄으로써 둘을 연결.  
