--- a/_posts/2020-07-16-express-3.md
+++ b/_posts/2020-07-16-express-3.md
@@ -16,7 +16,7 @@ tags:
 
 이런 경우, express.Router를 사용하면 문제가 간단해질 수 있다.  
 
-```nodejs
+```javascript
 // main.js
 const topicRouter = require('./routes/topic');
 app.use('/topic', topicRouter);
@@ -26,7 +26,7 @@ app.use('/topic', topicRouter);
 그리고 topic.js 이런식으로 따로 파일을 만들어서, '/topic'으로 시작하는 애들의 routing을  
 그 파일 내에서 잘 해결해주면 된다.  
  
-```nodejs
+```javascript
 // topic.js
 const express = require('express');
 const router = express.Router();
