--- a/_posts/2020-07-19-AJAX.md
+++ b/_posts/2020-07-19-AJAX.md
@@ -59,7 +59,7 @@ send() 메소드의 파라미터는 POST방식일 때만.
 그러면, onreadystatechange에 연결해줬던 함수가  
 어떤 역할을 해야 하는지에 대해 알아보자.  
 
-1. request의 상태값을 검사한다.  
+##### 1. request의 상태값을 검사한다.  
 
 readyState의 상태값이 가질 수 있는 모든 값의 목록은  
 [여기](https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/readyState)에 가서 참고하도록 하자.  
@@ -73,7 +73,7 @@ if(httpRequest.readyState === XMLHttpRequest.DONE) {
 	// 아직 준비되지 않음
 }
 ```
-2. HTTP 응답 상태 코드를 검사한다.  
+##### 2. HTTP 응답 상태 코드를 검사한다.  
 
 가능한 모든 코드 값의 목록은 [여기](https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html)에서.  
 ```javascript
@@ -87,7 +87,7 @@ if (httpRequest.status === 200) {
 ```
 응답 코드가 200번이면 AJAX 요청이 정상적으로 처리되었다는 뜻.  
 
-3. 서버에서 받은 데이터로 원하는 작업 수행.  
+##### 3. 서버에서 받은 데이터로 원하는 작업 수행.  
 
 받은 데이터에 접근하는 방법은 두 가지가 있다.  
 * httpRequest.responseText  
