--- a/_posts/2020-07-29-Tree.md
+++ b/_posts/2020-07-29-Tree.md
@@ -8,32 +8,33 @@ tags:
 ---
 
 ### Tree
-Tree 자료구조는 Node로 이루어짐.
-꼭대기는 Root. 
-Root Node에서 아래의 Node들로 내려가면서 이어지는 자료구조.
+Tree 자료구조는 Node로 이루어짐.  
+꼭대기는 Root.   
+Root Node에서 아래의 Node들로 내려가면서 이어지는 자료구조.  
 
-각각의 Node들은 Child node들을 가짐.
-다른 Child node들로 이어지는 branch를 가진 Node를 Parent라고 함.
-Parent에서 branch로 이어진 Node들은 당연히 Child.
-Children이 없는, Tree의 맨 마지막에 있는 Node들을 Leaf.
-Children은 그들이 Root가 되는 Subtree를 가짐.
-
+각각의 Node들은 Child node들을 가짐.  
+다른 Child node들로 이어지는 branch를 가진 Node를 Parent라고 함.  
+Parent에서 branch로 이어진 Node들은 당연히 Child.  
+Children이 없는, Tree의 맨 마지막에 있는 Node들을 Leaf.  
+Children은 그들이 Root가 되는 Subtree를 가짐.  
+ 
 ### Binary Search Tree
-Binary Search Tree는 한 Node 당 두 개의 Children만 가질 수 있음.
-또한, Binary Search Tree는 정렬되어있음. 모든 Left subtree들이 Parent Node보다 같거나 작음.
-모든 Right subtree들은 Parent Node보다 크거나 같음.
+Binary Search Tree는 한 Node 당 두 개의 Children만 가질 수 있음.  
+또한, Binary Search Tree는 정렬되어있음.   
+모든 Left subtree들이 Parent Node보다 같거나 작음.  
+모든 Right subtree들은 Parent Node보다 크거나 같음.  
 
-이진 탐색의 원리로 인해, 대부분의 검색이 트리의 절반정도를 스킵한다.
-그래서 삽입, 삭제, 검색이 트리에 저장된 아이템의 평균적으로 O(logN)의 속도를 보임.
-Key로 아이템을 순차적으로 찾거나 Unsorted array의 O(n)보다는 빠르지만 
-Hash table의 O(1)보다는 느림.
+이진 탐색의 원리로 인해, 대부분의 검색이 트리의 절반정도를 스킵한다.  
+그래서 삽입, 삭제, 검색이 트리에 저장된 아이템의 평균적으로 O(logN)의 속도를 보임.  
+Key로 아이템을 순차적으로 찾거나 Unsorted array의 O(n)보다는 빠르지만   
+Hash table의 O(1)보다는 느림.  
 
-좌우가 얼추 갯수가 비슷하면 balanced, 그렇지 못하면 unbalanced.
-좌우의 갯수가 완전히 같으면 perfect, 한쪽으로만 완전히 치우쳐저있으면 degenerate. 
-degenerate은 linked list와 다름없음.  그러면 효율성이 떨어지기 때문에
-스스로 균형을 맞추는 red-black tree나 AVL tree도 있음.
+좌우가 얼추 갯수가 비슷하면 balanced, 그렇지 못하면 unbalanced.  
+좌우의 갯수가 완전히 같으면 perfect, 한쪽으로만 완전히 치우쳐저있으면 degenerate.   
+degenerate은 linked list와 다름없음.  그러면 효율성이 떨어지기 때문에  
+스스로 균형을 맞추는 red-black tree나 AVL tree도 있음.  
 
-노드의 삽입이나 삭제는 재귀 알고리즘을 활용함.
+노드의 삽입이나 삭제는 재귀 알고리즘을 활용함.  
 
 ```javascript
 /* Binary Search Tree */
@@ -137,7 +138,8 @@ class BST {
             }
 
             if(data == node.data) {                                         
-                if(node.left == null && node.right == null) { // 노드가 양쪽의 자식이 모두 없으면
+                if(node.left == null && node.right == null) { 
+                    // 노드가 양쪽의 자식이 모두 없으면
                     return null;                                            
                 }                                                           
                 
@@ -165,7 +167,8 @@ class BST {
                 return node;                                                
 
             } else if(data < node.data) {                                   
-                // 만약 이번에 순회하는 노드가 타겟 데이터를 가진 노드가 아니라면 타겟 방향으로 한 칸 더 가서 재귀호출
+                // 만약 이번에 순회하는 노드가 타겟 데이터를 가진 노드가 아니라면 
+                // 타겟 방향으로 한 칸 더 가서 재귀호출
                 node.left = removeNode(node.left, data);
                 return node;
                 // 즉, 타겟 데이터를 가진 노드가 아니면 건드리면 안되니까
@@ -318,28 +321,28 @@ console.log('levelOreder: ' + bst.levelOrder());
 ```
 
 ### BFS & DFS
-Depth first search는 branch by branch로 트리를 탐색하고
-Breadth first search는 level by level로 트리를 탐색한다.
+Depth first search는 branch by branch로 트리를 탐색하고  
+Breadth first search는 level by level로 트리를 탐색한다.  
 
-in-order depth first search는 left node -> root node -> right node 순으로 검색을 해나간다.
-이 순서로 탐색을 완료하고나면, 트리의 모든 값들이 순서대로(오름차순) 출력된다.
-pre-order dfs는 root node -> left node -> right node 순으로 검색.
-post-order dfs는 left node -> right node -> root node 순으로 검색.
+in-order depth first search는 left node -> root node -> right node 순으로 검색을 해나간다.  
+이 순서로 탐색을 완료하고나면, 트리의 모든 값들이 순서대로(오름차순) 출력된다.  
+pre-order dfs는 root node -> left node -> right node 순으로 검색.  
+post-order dfs는 left node -> right node -> root node 순으로 검색.  
+  
+Breadth first search는 Queue 자료구조를 사용한다.  
+Root node부터 시작해서 트리의 레벨별로 순회를 하기 때문에, Level order search라고도 한다.  
 
-Breadth first search는 Queue 자료구조를 사용한다.
-Root node부터 시작해서 트리의 레벨별로 순회를 하기 때문에, Level order search라고도 한다.
-
-BST는 아주 많은 양의 정렬된 데이터를 가지고 작업할 때 매우 효과적이다.
+BST는 아주 많은 양의 정렬된 데이터를 가지고 작업할 때 매우 효과적이다.  
 
 ***
 
-재귀에 익숙하지 않아서 이해하는 데에 역대급으로 오래 걸렸다.
-다른 BST 코드를 막 찾아보면서, 최대한 재귀가 없는 코드를 찾아보려고 했는데
-애초에 그럴 수가 없는 코드였다는 생각이 들고나서부터 이 코드 이해하는데만 이틀이 걸린 듯.
+재귀에 익숙하지 않아서 이해하는 데에 역대급으로 오래 걸렸다.  
+다른 BST 코드를 막 찾아보면서, 최대한 재귀가 없는 코드를 찾아보려고 했는데  
+애초에 그럴 수가 없는 코드였다는 생각이 들고나서부터 이 코드 이해하는데만 이틀이 걸린 듯.  
 
-이해하고나서 보니, 코드를 제대로 읽지 않아서 이해가 안됐다는 걸 알게 됐다.
-처음부터 집중해서 코드를 읽었으면 쉽게 이해했을텐데..
-if문을 제대로 보지 않아서 생각이 꼬였다.
-어우. 지긋지긋해.
+이해하고나서 보니, 코드를 제대로 읽지 않아서 이해가 안됐다는 걸 알게 됐다.  
+처음부터 집중해서 코드를 읽었으면 쉽게 이해했을텐데..  
+if문을 제대로 보지 않아서 생각이 꼬였다.  
+어우. 지긋지긋해.  
 
-얘로 어떻게 문제를 풀지 앞이 캄캄하다 증말로.
+얘로 어떻게 문제를 풀지 앞이 캄캄하다 증말로.  
